# crescendAI

./: .gitignore  CLAUDE.md  Justfile  LICENSE  PIANO_TUTOR_PRD.md  README.md  TIMELINE.txt  Video1.mov  Video2.mov  Video3.mov
apps/api/: .dev.vars.example  .gitignore  Cargo.toml  RUST_STYLE.md  TS_STYLE.md  build.sh  drizzle.config.ts  package.json  tailwind.config.js  tailwind.css  test-passage-loop-persistence.ts  test-pipeline-mode.ts  test-pipeline-teacher.ts  tsconfig.json  vitest.config.ts  vitest.node.config.ts  wrangler.toml
apps/content-engine/: .env.example  .gitignore  pyproject.toml
apps/evals/: .gitignore  EVAL_CHECKLIST.md  e2e_full_session.py  e2e_ui_session.py  load_test.py  memory_seeder.py  paths.py  piece_id_e2e.py  pyproject.toml  ui_verifier.py  viewer.html  viewer.py
apps/inference/: Dockerfile  amt_handler.py  amt_local_server.py  amt_to_json.py  audio_chunker.py  constants.py  eval_runner.py  extract_amt_midi.py  handler.py  handler_hf.py  local_server.py  muq_chunk_compare.py  muq_local_server.py  pyproject.toml  requirements.txt  smoke_test.py  smoke_test_amt.py  sync_checkpoints.sh  test_amt_handler.py  test_inference.py
apps/shared/: Cargo.toml  build.rs
apps/web/: .cta.json  .env.production  .gitignore  Cargo.toml  Trunk.toml  biome.json  index.html  package-lock.json  package.json  playwright.scorehost.config.ts  tailwind.config.js  tailwind.css  vite.config.scorehost.ts  vite.config.ts  vitest.components.config.ts  worker-configuration.d.ts  wrangler.jsonc  wrangler.toml
backend/: Cargo.toml  wrangler.toml
backend/src/: handlers.rs  lib.rs  modal_client.rs  processing.rs
hackathon-poc/: mcp_server.py  modal_app.py  pyproject.toml  test_xai_client.py
model/: .gitignore  CLAUDE.md  FIXES_APPLIED.md  LICENSE  OPTIMIZATION_SUMMARY.md  QUICK_START.md  README.md  colab_setup.py  create_pytorch_model.py  debug_symbolic.py  deploy.py  deploy_local.py  diagnose_gdrive.py  diagnose_io_errors.py  evaluate_audio_only.py  preflight_check.py  pyproject.toml  setup.py  setup_production_pipeline.py  train.py  validate_midi_tokens.py
model/config/: amt_version.json
model/configs/: audioonly_10k.yaml  baseline_audioonly.yaml  baseline_synthetic.yaml  default.yaml  diagnostic_pretrain.yaml  experiment.yaml  experiment_10k.yaml  experiment_full.yaml  expert_finetune.yaml  fusion_10k.yaml  midi_only_percepiano.yaml  pseudo_pretrain.yaml
model/crescendai_model/: __init__.py
model/data/: .gitignore  .maestro_progress.json  ANNOTATION_GUIDE.md  a1_max_sweep_results.json  ablation_sweep_results.json  embed_ready_manifest.json  label_studio_config.xml  maestro_selected.csv
model/docs/: AB_TESTING_FRAMEWORK.md  AGENT_PROMPT_TEMPLATE.md  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  AUDIO_EXPERIMENTS_REPORT.md  DATASET_SWITCH_SUMMARY.md  EXPERIMENT_LOG.md  GRAD_SCHOOL_SUMMARY.md  IMPROVEMENT_PLAN.md  PAPER_ROADMAP.md  PERCEPIANO_MODERN_IMPROVEMENTS.md  PERCEPIANO_SOTA_REFERENCE.md  README_DEPLOYMENT.md  README_EVALUATOR.md  RESEARCH_v1.md  RESEARCH_v2.md  RESEARCH_v2_FINDINGS.md  RESEARCH_v3.md  RESEARCH_v4.md  ROADMAP.md  TASKS.md  TECHNICAL_IMPROVEMENTS.md  TRAINING_PLAN_v2.md  TUTOR_MODEL_TASKS.md  deployment_roadmaps.md  disentanglement_research.md
model/embeddings/: requirements.txt  server.py  setup.sh  start.sh  test_client.py  test_setup.py
model/jobs/: hf_launch.py  smoke_train.py  train_aria.py
model/labeling/: preview_sections.py  quick_labeler.py  section_based_labeler.py
model/notebooks/: 01_main_experiments.ipynb  1_Optimized_Hybrid_Pretraining.ipynb  2_CCMusic_Hybrid_Finetuning.ipynb  3_Comprehensive_Model_Comparison.ipynb  A_end_to_end_colab.ipynb  baseline_validation.ipynb  disentanglement_experiments.ipynb  generate_symbolic_predictions.ipynb  preprocess_percepiano_data.ipynb  train_aligned_fusion_experiments.ipynb  train_audio_baseline.ipynb  train_audio_experiments.ipynb  train_audio_phase2_experiments.ipynb  train_compare_models.ipynb  train_definitive_experiments.ipynb  train_expanded_dataset.ipynb  train_full_model.ipynb  train_fusion_phase3_experiments.ipynb  train_midi_only_percepiano.ipynb  train_noisy_student.ipynb  train_on_colab.ipynb  train_original_percepiano.ipynb  train_paper_ready_experiments.ipynb  train_percepiano_replica.ipynb  train_percepiano_replica_colab.ipynb  train_score_aligned.ipynb  train_strongest_paper.ipynb
model/scorer/: calibrate.py  dataset.py  infer.py  model.py  train.py
model/scripts/: amt_pseudo_truth_analyze.py  amt_pseudo_truth_pilot.py  analyze_models.py  audit_score_midi_coverage.py  batch_manager.py  build_amt_test_set.py  calculate_note_accuracy.py  collect_competition_data.py  collect_generic_competition.py  collect_maestro_audio.py  collect_youtube_piano.py  compute_maestro_calibration.py  convert_jax_to_pytorch.py  convert_minimal_to_onnx.py  convert_to_onnx.py  copy_data_to_local.py  create_minimal_model.py  create_segments.py  curate_intermediate_recordings.py  diagnose_midi.py  diagnose_symbolic_gap.py  diagnose_training.py  diagnostic_experiments.py  download_maestro.py  download_maestro_subset.py  download_practice_eval.py  embed_server.py  evaluate_checkpoint.py  extract_maestro_selected.py  extract_muq_embeddings.py  extract_percepiano_muq.py  fix_annotation_paths.py  generate_annotations_with_tiers.py  generate_maestro_metadata.py  generate_pseudo_labels.py  ingest_gutenberg.py  ingest_youtube.py  inspect_model.py  monitor_download.sh  pianoteq_demo_validation.py  (+33 more)
model/src/: __init__.py  architecture_comparison.py  enhanced_data_augmentation.py  enhanced_feature_extraction.py  hybrid_perception_model.py  paths.py  piano_data_augmentation.py  simple_architecture_test.py  train_hybrid_ast.py  train_hybrid_ast_augmented.py
model/symbolic/: calibrate_pseudo.py  extract_pseudo.py
model/tests/: __init__.py  test_ast_smoke.py  test_audio_encoder.py  test_audio_io.py  test_audio_processing.py  test_augmentation.py  test_ccmusic_dataset.py  test_midi_encoder.py  test_model_api.py  test_mtl_head.py  test_ssl_losses.py  (+1 more)
server/: .gitignore  Cargo.toml  wrangler.toml
(+2900 files in other folders)
