[package]
name = "piano-analyzer-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.3"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Request",
  "Response",
  "FormData",
  "File",
]
