[package]
name = "piano-analyzer-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.3"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "wasm-bindgen"] }
base64 = "0.22"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Request",
  "Response",
  "FormData",
  "File",
]

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
serde_test = "1.0"
