[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crescendai-model"
version = "1.0.0"
description = "Audio Spectrogram Transformer for 19-dimensional piano performance analysis"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9,<3.12"

dependencies = [
    # Audio processing
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    # Scientific computing and visualization
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.10.0,<1.12.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    # Data handling
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    # Machine Learning (PyTorch Lightning stack)
    "torch>=2.0.1",
    "torchvision>=0.15.2",
    "torchaudio>=2.0.2",
    "pytorch-lightning>=2.3.3",
    "torchmetrics>=1.2.0",
    "einops>=0.8.1",
    # ML utilities
    "scikit-learn>=1.3.0",
    "datasets>=4.0.0",
    "huggingface-hub>=0.34.4",
    # Experiment tracking
    "wandb>=0.16.0",
    "tensorboard>=2.15.0",
    # Data formats
    "pyarrow>=21.0.0",
    "jsonlines>=4.0.0",
    # CLI and utilities
    "typer[all]>=0.17.4",
    "orjson>=3.11.3",
    # MIDI processing
    "pretty-midi>=0.2.10",
    "mido>=1.3.3",
    # Network utilities for dataset download
    "requests>=2.31.0",
    "onnx>=1.19.0",
    "onnxruntime>=1.20.1",
]

[project.optional-dependencies]
# Development tools
dev = [
    "black>=23.0.0",
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.0.0",
    "pre-commit>=3.0.0",
]

# Data labeling and annotation
labeling = [
    "streamlit>=1.50.0",
    "plotly>=5.17.0",
    "ipywidgets>=8.0.0",
]

# Model serving
serving = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.20",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.setuptools.packages.find]
where = ["src", "pytorch"]
