[project]
name = "piano-eval-mvp"
version = "0.1.0"
description = "Piano Performance Evaluation MVP using PyTorch Lightning and MERT-95M"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core ML frameworks
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "torchmetrics>=1.0.0",
    # Transformers and pre-trained models
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    # Audio processing
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "pedalboard>=0.9.0",
    "audioread>=3.0.0",
    "resampy>=0.4.2",
    "pydub>=0.25.0",
    # MIDI processing
    "mido>=1.3.0",
    "pretty-midi>=0.2.10",
    # Numerical and scientific computing
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    # Utilities
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "omegaconf>=2.3.0",
    # Data handling
    "h5py>=3.8.0",
    "jsonlines>=3.1.0",
    # Optional: Experiment tracking
    "wandb>=0.15.0",
    # RAG ingestion
    "youtube-transcript-api>=0.6.0",
    "ipykernel>=7.0.1",
    "rich>=14.2.0",
    "torchaudio>=2.9.0",
    "jupyter>=1.1.1",
    "gdown>=5.2.0",
    "nnaudio>=0.3.3",
    "muq>=0.1.0",
    # Model improvement experiments
    "yt-dlp>=2024.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "peft>=0.7.0",
    "miditok>=3.0.0",
    "audiomentations>=0.34.0",
    "torch-geometric>=2.4.0",
    "statsmodels>=0.14.6",
    "psutil>=5.9.0",
    "umap-learn>=0.5.11",
    # Taxonomy analysis
    "sentence-transformers>=2.2.0",
    "hdbscan>=0.8.33",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "ruff>=0.0.270",
    "mypy>=1.3.0",
    "ipython>=8.12.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]

# GPU-accelerated audio processing (optional, requires CUDA)
gpu = ["nnAudio>=0.3.2"]

# Layer 1 validation experiments (Experiment 2 AMT transcription)
# Note: YourMT3+ is not on PyPI -- install from GitHub:
#   pip install git+https://github.com/mimbres/YourMT3.git
layer1 = [
    "piano-transcription-inference",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/score_alignment", "src/audio_experiments", "src/disentanglement", "src/model_improvement", "src/masterclass_experiments", "src/score_library"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing"

[tool.ruff]
target-version = "py310"
select = ["E", "F", "W", "I"]
ignore = []
exclude = [".git", ".venv", "__pycache__", "build", "dist"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
