[package]
name = "crescendai-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.6.1"
wasm-bindgen = "=0.2.101"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "wasm-bindgen"] }
base64 = "0.22"
base64-simd = "0.8"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
# Security-related dependencies
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
regex = "1.10"
once_cell = "1.19"
futures = "0.3"
rand = { version = "0.8", default-features = false, features = ["std_rng"] }
# Audio processing dependencies (WASM-compatible)
rustfft = "6.1"
hound = "3.5"
num-complex = "0.4"
log = "0.4"
realfft = "3.3"
# ML inference dependencies (using simple rule-based evaluator)
# ort = "2.0.0-rc.10"  # Disabled - no WASM support
# ndarray = "0.15"     # Disabled - not needed for simple evaluator
# ACE framework dependencies
chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }
async-trait = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console", "Request", "Response", "FormData", "File", "Blob"
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
tokio-test = "0.4"
mockall = "0.12"
serde_test = "1.0"
futures-test = "0.3"
async-trait = "0.1"
mockito = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
test-case = "3.3"
tempfile = "3.8"
toml = "0.8"
once_cell = "1.19"
insta = "1.34" # For snapshot testing
fake = "2.9" # For generating test data

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
