[package]
name = "crescendai-api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Worker runtime
worker = { version = "0.7", features = ["http", "d1"] }
axum = { version = "0.8.8", default-features = false }
http = "1.0"
http-body-util = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# WASM / JS interop
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

# Auth / JWT
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Async streams
futures-channel = "0.3"
futures-util = "0.3"

# Utilities
console_error_panic_hook = "0.1"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
