[project]
name = "content-engine"
version = "0.1.0"
description = "crescendai content engine: clip-driven model commentary pipeline"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "flask>=3.0.0",
    "apscheduler>=3.10.0",
    "sentry-sdk>=2.0.0",
    "yt-dlp>=2024.5.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["content_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
