[project]
name = "crescendai-inference"
version = "0.1.0"
description = "RunPod serverless inference handler for piano performance analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # RunPod SDK
    "runpod>=1.3.0",
    # PyTorch and ML
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "transformers>=4.30.0",
    # Audio processing
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    # MIDI (optional, for transcription)
    "basic-pitch>=0.3.0",
    "pretty-midi>=0.2.10",
    # Utilities
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "requests>=2.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]
