[package]
name = "piano-feedback-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
gloo-net = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
log = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlAudioElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "AudioContext",
    "AnalyserNode",
    "MediaElementAudioSourceNode",
]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
