[package]
name = "crescendai"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos core
leptos = "0.7"
leptos_router = "0.7"
leptos_meta = "0.7"

# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"

# SSR dependencies
leptos_axum = { version = "0.7", default-features = false, features = ["wasm"], optional = true }
axum = { version = "0.7", default-features = false, features = ["json"], optional = true }
worker = { version = "0.7", features = ["http", "d1"], optional = true }
tower = { version = "0.4", features = ["util"], optional = true }
tower-service = { version = "0.3", optional = true }
http = { version = "1.0", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
regex = "1.10"

# Hydrate dependencies
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
futures = { version = "0.3", optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlAudioElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "AudioContext",
    "AnalyserNode",
    "MediaElementAudioSourceNode",
] }

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:gloo-timers",
    "dep:js-sys",
    "dep:web-sys",
]
ssr = [
    "leptos/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:worker",
    "dep:tower",
    "dep:tower-service",
    "dep:http",
    "dep:getrandom",
    "dep:serde-wasm-bindgen",
    "dep:js-sys",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:futures",
]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
