[package]
name = "piano_api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (PostgreSQL with async support)
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }

# HTTP client (for external APIs)
reqwest = { version = "0.11", features = ["json", "stream"] }

# Middleware & utilities
tower = { version = "0.4", features = ["timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors", "compression-full", "trace"] }

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# JWT authentication
jsonwebtoken = "9.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
dotenvy = "0.15"

# UUID support
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Cloudflare R2 (S3-compatible storage)
aws-sdk-s3 = "1.11"
aws-config = "1.1"
aws-credential-types = "1.1"
bytes = "1.5"

# Hashing (for cache keys)
sha2 = "0.10"
hex = "0.4"

# PDF processing
lopdf = "0.32"
pdf-extract = "0.7"

# Tokenization for chunking
tiktoken-rs = "0.5"

# Async streaming
async-stream = "0.3"
futures = "0.3"

[dev-dependencies]
# Testing
tokio-test = "0.4"
