[package]
name = "piano-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Cloudflare Workers runtime (latest)
worker = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Async utilities
futures-util = "0.3"

# UUID support (js feature for wasm32-unknown-unknown)
uuid = { version = "1.11", features = ["v4", "serde", "js"] }

# Hashing
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols
