[project]
name = "pipeline-eval"
version = "0.1.0"
description = "Pipeline evaluation harness for CrescendAI"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "groq>=0.4.0",
    "requests>=2.31.0",
    "websockets>=12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared", "observation_quality", "subagent_reasoning"]
