[project]
name = "memory-eval"
version = "0.1.0"
description = "Memory system evaluation harness for CrescendAI"
requires-python = ">=3.10"
dependencies = [
    "groq>=0.4.0",
    "anthropic>=0.20.0",
    "requests>=2.31.0",
    "sentence-transformers>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
