[package]
name = "score-analysis"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"

[[bin]]
name = "dtw_chunk_cli"
path = "src/bin/dtw_chunk_cli.rs"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "s"
lto = true
